Fix TaskMapper, Task, build.gradle.kts